--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,12 @@ website/build
 website/.docusaurus
 .cache-loader
 
+# python virtual environment
+.venv
+
+# chroma db files
+chroma_db/*
+
 # misc
 .DS_Store
 .env.local
