--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,5 @@
-# dependencies
-website/node_modules
-
-# production
-website/build
-
 # generated files
-website/.docusaurus
+*.pyc
 .cache-loader
 
 # python virtual environment
@@ -20,7 +14,3 @@ chroma_db/*
 .env.development.local
 .env.test.local
 .env.production.local
-
-website/npm-debug.log*
-website/yarn-debug.log*
-website/yarn-error.log*
